<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_start"
            android:title="@string/menu_start" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_auth"
            android:icon="@drawable/ic_auth"
            android:title="@string/menu_auth" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_auth"
            android:title="@string/menu_statistics" />
    </group>
</menu>