<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableLayout
            android:id="@+id/table_easy"
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:text="@string/easy_level"
                    android:textAlignment="center"
                    android:textSize="22sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:background="@drawable/border"
                    android:text="@string/user_name"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:background="@drawable/border"
                    android:text="@string/your_result"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/table_normal"
            android:layout_width="match_parent"
            android:layout_height="212dp"
            app:layout_constraintTop_toBottomOf="@+id/table_easy"
            tools:layout_editor_absoluteX="-16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:text="@string/normal_level"
                    android:textAlignment="center"
                    android:textSize="22sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:background="@drawable/border"
                    android:text="@string/user_name"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:background="@drawable/border"
                    android:text="@string/your_result"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/table_hard"
            android:layout_width="match_parent"
            android:layout_height="212dp"
            app:layout_constraintTop_toBottomOf="@+id/table_normal"
            tools:layout_editor_absoluteX="0dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:text="@string/hard_level"
                    android:textAlignment="center"
                    android:textSize="22sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:background="@drawable/border"
                    android:text="@string/your_result"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:background="@drawable/border"
                    android:text="@string/your_result"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>